--- a/StockCTRL/pom.xml
+++ b/StockCTRL/pom.xml
@@ -56,7 +56,22 @@
       <version>2.0.16</version>
     </dependency>
 
-<!--    <dependency>-->
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.uuid/java-uuid-generator -->
+    <dependency>
+      <groupId>com.fasterxml.uuid</groupId>
+      <artifactId>java-uuid-generator</artifactId>
+      <version>5.1.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.5</version>
+    </dependency>
+
+
+
+    <!--    <dependency>-->
 <!--      <groupId>javax.annotation</groupId>-->
 <!--      <artifactId>javax.annotation-api</artifactId>-->
 <!--      <version>1.3.2</version>-->
